weather box z-index fixed

--- a/src/style.css
+++ b/src/style.css
@@ -137,6 +137,7 @@ body {
 
     overflow: visible;
     position: relative;
+    z-index: 100;
 }
 
 .matchbox {
